kubernetes/apps/mosquitto/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: docker.io/eclipse-mosquitto:2.0.22
          ports:
            - containerPort: 1883
          volumeMounts:
            - mountPath: /mosquitto/config
              name: config
            - mountPath: /mosquitto/data
              name: data
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
        - name: data
          persistentVolumeClaim:
            claimName: mosquitto-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
    - port: 1883
      name: mqtt
